{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 58,
  "lineage": "40f6e7d0-bbec-f5ac-948c-fd779e73a8d7",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "existing_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:loadbalancer/app/skillpact-load-balancer/c7742e16fa3896b0",
            "arn_suffix": "app/skillpact-load-balancer/c7742e16fa3896b0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "skillpact-load-balancer-1936434372.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:loadbalancer/app/skillpact-load-balancer/c7742e16fa3896b0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "skillpact-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07eedb5aadc568b54"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03829c3af164f8293"
              },
              {
                "subnet_id": "subnet-08c8a19dae741a6a7"
              }
            ],
            "subnets": [
              "subnet-03829c3af164f8293",
              "subnet-08c8a19dae741a6a7"
            ],
            "vpc_id": "vpc-0fc042da26546bf56",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_listener",
      "name": "existing_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:listener/app/skillpact-load-balancer/c7742e16fa3896b0/c0698e091cc64a8f",
            "certificate_arn": "arn:aws:acm:ap-south-1:238369675568:certificate/df0ee229-f1bb-4c69-b989-c62e5e9f90ee",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:targetgroup/skillpact-app-tg/93762bb02daed5a5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:listener/app/skillpact-load-balancer/c7742e16fa3896b0/c0698e091cc64a8f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:loadbalancer/app/skillpact-load-balancer/c7742e16fa3896b0",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "existing_app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:targetgroup/skillpact-app-tg/93762bb02daed5a5",
            "arn_suffix": "targetgroup/skillpact-app-tg/93762bb02daed5a5",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:targetgroup/skillpact-app-tg/93762bb02daed5a5",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "skillpact-app-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fc042da26546bf56"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "existing_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238369675568:security-group/sg-0d20bd4b7dad5daf0",
            "description": "Allow traffic",
            "filter": null,
            "id": "sg-0d20bd4b7dad5daf0",
            "name": "skillpact_sg",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0fc042da26546bf56"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:238369675568:vpc/vpc-0fc042da26546bf56",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01500a063ac595b73",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-01a0210e0b63b91e7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc042da26546bf56",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-043f1ba0fb0e7c4ad",
            "owner_id": "238369675568",
            "tags": {
              "Name": "skillpact-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "nextjs_app_routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:targetgroup/skillpact-app-tg/93762bb02daed5a5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:listener-rule/app/skillpact-load-balancer/c7742e16fa3896b0/c0698e091cc64a8f/10b451fff44da808",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "X-Service-Identifier",
                    "values": [
                      "skillpact.in"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:listener-rule/app/skillpact-load-balancer/c7742e16fa3896b0/c0698e091cc64a8f/10b451fff44da808",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:listener/app/skillpact-load-balancer/c7742e16fa3896b0/c0698e091cc64a8f",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_lb_listener.existing_listener",
            "data.aws_lb_target_group.existing_app_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "nextjs_app_routing_preflight",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:targetgroup/skillpact-app-tg/93762bb02daed5a5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:listener-rule/app/skillpact-load-balancer/c7742e16fa3896b0/c0698e091cc64a8f/4d6c78319b8c1abb",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "Origin",
                    "values": [
                      "*://www.skillpact.in",
                      "skillpact.in"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:listener-rule/app/skillpact-load-balancer/c7742e16fa3896b0/c0698e091cc64a8f/4d6c78319b8c1abb",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:listener/app/skillpact-load-balancer/c7742e16fa3896b0/c0698e091cc64a8f",
            "priority": 102,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_lb_listener.existing_listener",
            "data.aws_lb_target_group.existing_app_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nextjs_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:targetgroup/skillpact-app-tg/93762bb02daed5a5-20240205111605374300000002",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:238369675568:targetgroup/skillpact-app-tg/93762bb02daed5a5",
            "target_id": "i-0adffe945ceb0d735"
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "data.aws_iam_instance_profile.existing_instance_profile",
            "data.aws_lb_target_group.existing_app_tg",
            "data.aws_security_group.existing_sg",
            "data.aws_subnets.existing_vpc_subnets",
            "data.aws_vpc.existing_vpc",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "tls_private_key.ed25519_key"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ignore_ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0770726357cfe8240",
            "arn": "arn:aws:ec2:ap-south-1:238369675568:instance/i-0adffe945ceb0d735",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "skillpact-ec2-instance-profile",
            "id": "i-0adffe945ceb0d735",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "skillpact",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00693f6788b5a3502",
            "private_dns": "ip-10-0-102-116.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.102.116",
            "public_dns": "ec2-15-206-189-212.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.189.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0634a5f7705d3b7fd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03829c3af164f8293",
            "tags": {
              "Environment": "dev",
              "Name": "nextjs-standalone-webserver",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nextjs-standalone-webserver",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "nextjs-standalone-webserver"
            },
            "vpc_security_group_ids": [
              "sg-0d20bd4b7dad5daf0"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "data.aws_iam_instance_profile.existing_instance_profile",
            "data.aws_security_group.existing_sg",
            "data.aws_subnets.existing_vpc_subnets",
            "data.aws_vpc.existing_vpc",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "tls_private_key.ed25519_key"
          ]
        }
      ]
    }
  ]
}